--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.3",
     "react-typed": "^1.2.0",
