--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.3",
     "react-typed": "^1.2.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
