--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.2",
     "react-tsparticles": "^2.1.3",
     "react-typed": "^1.2.0",
     "react-vertical-timeline-component": "^3.5.2",
