--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emailjs-com": "^3.2.0",
     "howler": "^2.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-google-recaptcha": "^2.1.0",
